--- a/crypto-dashboard/src/app/globals.css
+++ b/crypto-dashboard/src/app/globals.css
@@ -12,7 +12,8 @@ h1 {
 }
 
 .refresh-button {
-  padding: 0.4rem 0.8rem;
+  padding: 0.5rem;
+  margin-right: 4rem;
   background-color: #696f76;
   color: white;
   border: none;
