--- a/crypto-dashboard/src/app/globals.css
+++ b/crypto-dashboard/src/app/globals.css
@@ -7,7 +7,7 @@
 
 h1 {
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
 }
 
