--- a/crypto-dashboard/src/app/globals.css
+++ b/crypto-dashboard/src/app/globals.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .coin-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -13,7 +17,7 @@ h1 {
 
 .refresh-button {
   padding: 0.5rem;
-  margin-right: 4rem;
+  margin-right: 3.1rem;
   background-color: #696f76;
   color: white;
   border: none;
