--- a/crypto-dashboard/src/components/components.module.css
+++ b/crypto-dashboard/src/components/components.module.css
@@ -4,7 +4,7 @@
   padding: 1rem;
   margin-bottom: 1rem;
   max-width: 400px;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .searchInput {
   padding: 0.5rem;
