--- a/crypto-dashboard/src/app/globals.css
+++ b/crypto-dashboard/src/app/globals.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .coin-grid {
@@ -11,7 +11,7 @@ body {
 
 h1 {
   text-align: center;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
 }
 
