--- a/crypto-dashboard/src/styles/globals.css
+++ b/crypto-dashboard/src/styles/globals.css
@@ -18,6 +18,7 @@ h1 {
 .refresh-button {
   padding: 0.5rem;
   margin-right: 3.1rem;
+  margin-bottom: 1rem;
   background-color: #696f76;
   color: white;
   border: none;
